--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@tailwindcss/vite": "^4.0.9",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.54.2",
         "tailwind-merge": "^3.0.2",
         "tw-merge": "^0.0.1-alpha.3"
     },
