--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
         "tailwind-merge": "^3.0.2",
-        "tw-merge": "^0.0.1-alpha.3"
+        "tw-merge": "^0.0.1-alpha.3",
+        "zustand": "^5.0.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
